Bug 294131 - Kmail filter rewrites subject, but it keeps displaying old one
Summary: Kmail filter rewrites subject, but it keeps displaying old one
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: filtering (other bugs)
Version First Reported In: 4.7
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-15 08:47 UTC by Nick Malakhov
Modified: 2012-05-22 20:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nick Malakhov 2012-02-15 08:47:00 UTC
Version:           4.7 (using KDE 4.7.4) 
OS:                Linux

I have a filter that moves some mailt into subdirectory and rewrites header 'Subject' to match my own wishes.

It that subdirectory is displaed in time mail delivered, then I can see rewrited subject. But when I leave that directory and switch to it back, all subjects turn back to originals. Even if I restart KMail it keeps displaing original subjects for mails.

In 'view all headers' window I can see rewrited subject untill restart. After restart Subject header turns back to original value.

Reproducible: Always

Steps to Reproduce:
Create filter wich rewrites 'Subject' header and moves mail into subdirectory
Get that mail
Optionally restart KMail

Actual Results:  
Kmail doesn't display rewrited value of Subject. After restart subject turns back to original value.

Expected Results:  
KMail should always display rewrited subject.

KMail version 4.7.4
KDE platform vesrion 4.7.4
Qt version 4.7.4
Comment 1 Thomas Arend 2012-05-14 16:59:14 UTC
I can confirm this for version >4.8.0. Observed this behaviour especially on false positive SPAM messages.
Comment 2 Laurent Montel 2012-05-22 20:12:15 UTC
I confirm it.
Will look at why.
Comment 3 Laurent Montel 2012-05-22 20:36:52 UTC
Git commit 7c3a60003fcbb67a2a1e1f747455cf3dfa3ac636 by Montel Laurent.
Committed on 22/05/2012 at 22:36.
Pushed by mlaurent into branch 'master'.

Fix Bug 294131 - Kmail filter rewrites subject, but it keeps displaying

old one

FIXED-IN: 4.8.4

M  +11   -3    mailcommon/filter/filteractionrewriteheader.cpp

http://commits.kde.org/kdepim/7c3a60003fcbb67a2a1e1f747455cf3dfa3ac636
Comment 4 Laurent Montel 2012-05-22 20:42:07 UTC
Git commit 01da80a18e945920226360156af1a442e89c37b7 by Montel Laurent.
Committed on 22/05/2012 at 22:41.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 294131 - Kmail filter rewrites subject, but it keeps displaying

old one

FIXED-IN: 4.8.4

M  +9    -1    mailcommon/filteraction.cpp

http://commits.kde.org/kdepim/01da80a18e945920226360156af1a442e89c37b7