Fix Bug 294131 - Kmail filter rewrites subject, but it keeps displaying

old one

FIXED-IN: 4.8.4
BUG: 294131