mailcommon/filteraction.cpp
@@ -1712,7 +1712,15 @@ FilterAction::ReturnCode FilterActionRewriteHeader::process( ItemContext &contex
 
   const QString newValue = value.replace( mRegExp, mReplacementString );
 
-  header->fromUnicodeString( newValue, "utf-8" );
+  msg->removeHeader( mParameter.toLatin1() );
+
+  KMime::Headers::Base *newheader = KMime::Headers::createHeader(param);
+  if ( !newheader ) {
+    newheader = new KMime::Headers::Generic(param, msg.get(), newValue, "utf-8" );
+  } else {
+    header->fromUnicodeString( newValue, "utf-8" );
+  }
+  msg->setHeader( newheader );
   msg->assemble();
 
   context.setNeedsPayloadStore();
